--- a/MoneyMaking/Views/Shared/_Layout.cshtml
+++ b/MoneyMaking/Views/Shared/_Layout.cshtml
@@ -16,15 +16,12 @@
     <link rel="shortcut icon" type="~/image/ico" href="~/images/logo.ico" />
     <!-- Plugin-CSS -->
     @*<link href="~/css/font-awesome.min.css" rel="stylesheet" />*@
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css"
-          rel="stylesheet" type='text/css'>
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet" type='text/css'>
     <link rel="stylesheet" href="~/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/css/owl.carousel.min.css">
     <link rel="stylesheet" href="~/css/icofont.css">
     <link rel="stylesheet" href="~/css/magnific-popup.css">
     <link rel="stylesheet" href="~/css/animate.css">
-
-    <link href="~/css/half-slider.css" rel="stylesheet" />
     <!-- Main-Stylesheets -->
     <link href="~/Content/Site.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/normalize.css">
@@ -36,97 +33,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
-    <style>
-
-        .smpl-step {
-            margin-top: 40px;
-        }
-
-        .smpl-step {
-            border-bottom: solid 1px #e0e0e0;
-            padding: 0 0 10px 0;
-        }
-
-            .smpl-step > .smpl-step-step {
-                padding: 0;
-                position: relative;
-            }
-
-                .smpl-step > .smpl-step-step .smpl-step-num {
-                    font-size: 17px;
-                    margin-top: -20px;
-                    margin-left: 47px;
-                }
-
-                .smpl-step > .smpl-step-step .smpl-step-info {
-                    font-size: 14px;
-                    padding-top: 27px;
-                }
-
-                .smpl-step > .smpl-step-step > .smpl-step-icon {
-                    position: absolute;
-                    width: 70px;
-                    height: 70px;
-                    display: block;
-                    background: #CEE3F6;
-                    top: 45px;
-                    left: 50%;
-                    margin-top: -35px;
-                    margin-left: -15px;
-                    border-radius: 50%;
-                }
-
-                .smpl-step > .smpl-step-step > .progress {
-                    position: relative;
-                    border-radius: 0px;
-                    height: 8px;
-                    box-shadow: none;
-                    margin-top: 37px;
-                }
-
-                    .smpl-step > .smpl-step-step > .progress > .progress-bar {
-                        width: 0px;
-                        box-shadow: none;
-                        background: #428BCA;
-                    }
-
-                .smpl-step > .smpl-step-step.complete > .progress > .progress-bar {
-                    width: 100%;
-                }
-
-                .smpl-step > .smpl-step-step.active > .progress > .progress-bar {
-                    width: 50%;
-                }
-
-                .smpl-step > .smpl-step-step:first-child.active > .progress > .progress-bar {
-                    width: 0%;
-                }
-
-                .smpl-step > .smpl-step-step:last-child.active > .progress > .progress-bar {
-                    width: 100%;
-                }
-
-                .smpl-step > .smpl-step-step.disabled > .smpl-step-icon {
-                    background-color: #f5f5f5;
-                }
-
-                    .smpl-step > .smpl-step-step.disabled > .smpl-step-icon:after {
-                        opacity: 0;
-                    }
-
-                .smpl-step > .smpl-step-step:first-child > .progress {
-                    left: 50%;
-                    width: 50%;
-                }
-
-                .smpl-step > .smpl-step-step:last-child > .progress {
-                    width: 50%;
-                }
-
-                .smpl-step > .smpl-step-step.disabled a.smpl-step-icon {
-                    pointer-events: none;
-                }
-    </style>
+    
 </head>
 <body data-spy="scroll" data-target=".mainmenu-area">
     <!--Preloader-->
@@ -146,8 +53,7 @@
                             <span class="icon-bar"></span>
                         </button>
                         <a class="navbar-brand" rel="home" href="#" title="Your call center and virtual assistant solutions">
-                            <img style="max-width:300px; margin-top: -20px;"
-                                 src="~/images/logo.png">
+                            <img style="max-width:300px; margin-top: -20px;" src="~/images/logo.png">
                         </a>
                         @*<a class="navbar-brand" href="#home-area"><img src="~/images/logo.png" alt=""></a>*@
                     </div>
@@ -166,8 +72,6 @@
         </div>
     </nav>
     <!-- Mainmenu-Area-/ -->
-    <br />
-    <br />
     @RenderBody()
 
     <hr />
